--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,15 @@
 }
 
 body{
-    background: #f7f7f7;
+    background-position: center;
+    background: cover;
+}
+
+.ctn-hero-nav{
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0,0,0,.7)),  url(../Images/hero-background.jpg);
+    background-size: cover;
+    object-fit: cover;
 }
 
 .character-container p{
@@ -25,13 +33,6 @@ body{
     width: 120px;
     height: 120px;
     border: 3px solid #696969;
-}
-
-.ctn-hero-nav{
-    height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0,0,0,.7)),  url(../Images/hero-background.jpg);
-    background-size: cover;
-    object-fit: cover;
 }
 
 .hero-section h2{
@@ -104,4 +105,62 @@ body{
     height: 60px;
     padding-top: 15px;
     margin-left: 40px;
+}
+
+.img-ctn-character img{
+    width: 120px;
+    height: 120px;
+    border: 4px solid #b7a972;
+}
+
+.img-ctn-character{
+    height: 120px;
+
+}
+
+.character-text h3{
+    font-size: 15.5px;
+    text-shadow: 2px 2px 2px #333333;
+    color: #fff;
+    font-weight: bold;
+}
+
+.character-text p{
+    font-size: 10.5px;
+    text-shadow: 2px 2px 2px #333333;
+    color: #fff;
+    font-weight: bold;
+}
+
+.character-text{
+    text-align: center;
+    background-color: #57508f;
+    border: 4px solid #b7a972;
+    border-top: none;
+}
+
+.char-sec{
+    margin: 0 7rem;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ctn-char{
+    width: 120px;
+}
+
+.navbar-char{
+    background: #000;
+    margin: 0 13.7rem;
+    padding: 15px;
+}
+
+.navbar-char h2{
+    color: #fff;
+    text-decoration: none;
+    margin: 10px;
+    font-family: 'Dosis', sans-serif;
+    text-align: center;
 }
