--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
 }
 
 body{
-    background-position: center;
-    background: cover;
+    background-color: #0a0a0a;
+    color: #fff;
 }
 
 .ctn-hero-nav{
@@ -94,6 +94,7 @@ body{
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 9999;
 }
 
 .nav-bar-ctn{
@@ -107,60 +108,212 @@ body{
     margin-left: 40px;
 }
 
-.img-ctn-character img{
-    width: 120px;
-    height: 120px;
-    border: 4px solid #b7a972;
+/**CHAR**/ 
+
+.new-image{
+    width: 400px;
+    height: 250px;
+    background: #fff;
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
 }
 
-.img-ctn-character{
-    height: 120px;
-
-}
-
-.character-text h3{
-    font-size: 15.5px;
-    text-shadow: 2px 2px 2px #333333;
-    color: #fff;
-    font-weight: bold;
-}
-
-.character-text p{
-    font-size: 10.5px;
-    text-shadow: 2px 2px 2px #333333;
-    color: #fff;
-    font-weight: bold;
-}
-
-.character-text{
-    text-align: center;
-    background-color: #57508f;
-    border: 4px solid #b7a972;
-    border-top: none;
-}
-
-.char-sec{
-    margin: 0 7rem;
+.char-1{
+    background-image:linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.3)), url(../Images/StarPlatinum.png);
+    background-size: cover;
     background-position: center;
+}
+.char-2{
+    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.3)),url(../Images/char-2.jpeg);
+    background-size: cover;
+    background-position: center;
+}
+.char-3{
+    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.3)),url(../Images/char-3.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.char-4{
+    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.3)),url(../Images/char-4.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.char-5{
+    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.3)),url(../Images/char-5.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.char-6{
+    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.3)),url(../Images/char-6.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.ctn-p-news{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+
+.new{
+    width: 400px;
+}
+
+.new-text h3{
+    font-size: 22px;
+    font-family: 'Dosis', sans-serif;
+}
+
+.new-text p{
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+}
+
+.top-but{
+    height: 37px;
+    width: 95px;
+    background-color: #0a0a0a;
+    position: absolute;
+    border-radius: 5px;
+    top: 5px;
+    left: 5px;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-weight: bold;
+}
+
+.news-title{
+    background: #666;
+    color:#fff;
+    width: 250px;
+    padding:.5rem 3rem;
+    clip-path: polygon(100% 0, 93% 50%, 100% 99%, 0% 100%, 7% 50%, 0% 0%);
+}
+
+.title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.new-icon{
+    text-align: center;
+}
+
+.new-icon i{
+    display: inline-block;
+    margin: 10px;
+    margin-top: 20px;
+    color: #666;
+}
+
+.new-icon i:hover{
+    color: #fff;
+    cursor: pointer;
+}
+
+.new-image2{
+    width: 250px;
+    height: 350px;
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
+}
+
+.ctn-p-news2{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(4, 260px);
+    grid-template-rows: repeat(2, 360px);
+}
+
+.img-sect{
+    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(0,0,0,.6)),url(../Images/image-section.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    height: 400px;
+    background-position: center;
+    width: 1035px;
+    margin: auto;
+    margin-bottom: 3rem;
+    border-radius: 5px;
+}
+
+.img-sect-text{
+    padding-top: 9rem;
+    padding-left: 5rem;
+}
+
+.img-sect-text h2, .img-sect-text p, .img-sect-text button{
+    font-family: 'Dosis', sans-serif;
+}
+
+.img-sect-text h2{
+    font-size: 30px;
+}
+
+.img-sect-text p{
+    font-size: 25px;
+}
+
+.img-sect-text button{
+    padding: 12px 32px;
+    background: #000;
+    color: #fff;
+    border: 3px solid #000;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 10px;
+    transition: all 0.3s ease;
+}
+
+.img-sect-text button:hover{
+    background: transparent;
+}
+
+.section-image{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.ctn-char{
-    width: 120px;
-}
-
-.navbar-char{
-    background: #000;
-    margin: 0 13.7rem;
-    padding: 15px;
-}
-
-.navbar-char h2{
-    color: #fff;
-    text-decoration: none;
-    margin: 10px;
-    font-family: 'Dosis', sans-serif;
+.footer-pagina{
+    background-color: #000;
+    margin-top: 3rem;
+    padding-top: 4rem;
+    display:flex;
+    justify-content: center;
     text-align: center;
+}
+
+.icono a{
+    color:white;
+    width: 50px;
+    margin: 0px 15px 0px 15px;
+    text-decoration: none;
+}
+
+.icono{
+    position: relative;
+    bottom: 55px;
+}
+
+.icono-texto{
+    margin-top: 10px;
+}
+
+.icono a:hover{
+    color: #666;
 }
